started with drag and drop example

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,6 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+$background-color: #ff0000;
 
+body {
+  background-color: $background-color;
+}
