add overview tpl + mixins

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,3 +2,6 @@
 
 @import "components/comparison";
 @import "components/slide";
+@import "components/overview";
+
+@import "../../../node_modules/bootstrap-grid/dist/grid";
