--- a/resources/assets/sass/mixins/mixins.scss
+++ b/resources/assets/sass/mixins/mixins.scss
@@ -5,3 +5,13 @@
     clear: both;
   }
 }
+
+@mixin font-base {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+}
+
+@mixin font-bald {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+}
