filter css auslagern, detail filter styling

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,5 +3,7 @@
 @import "components/comparison";
 @import "components/slide";
 @import "components/overview";
+@import "components/filter";
+@import "components/detail";
 
 @import "../../../node_modules/bootstrap-grid/dist/grid";
