--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -10,3 +10,42 @@
 .wrapper__right {
   float: right;
 }
+
+.detail .filter {
+  text-align: center;
+}
+
+.detail {
+  .filter__search--label {
+    width: 30%;
+  }
+
+  .filter__search--span {
+    width: 60%;
+    float: left;
+    line-height: 33px;
+  }
+
+  .filter__search--search {
+    width: 40%;
+    float: left;
+  }
+}
+
+.detail__items--item {
+  width: 110px;
+  height: 110px;
+  background-color: #a1a1a1;
+  float: left;
+  margin: 8px;
+  float: none;
+  display: inline-block;
+}
+
+.detail__items {
+  overflow-x: scroll;
+  width: 90%;
+  margin-top: 100px;
+  white-space: nowrap;
+  margin: 40px 30px 0px 30px;
+}
