--- a/resources/assets/sass/components/comparison.scss
+++ b/resources/assets/sass/components/comparison.scss
@@ -1,23 +1,41 @@
-.comparison {
-  width: 800px;
-  height: 400px;
+.detail {
+  margin-bottom: 30px;
+}
 
-  #div1, #div2 {
-    height: 100%;
-    width: 49%;
-    margin-right: 1%;
-    border: 1px solid black;
-    float: left;
-
-    &:last-child {
-      margin: 0;
-    }
-
-  }
+.detail__compare__select, .detail__compare__data {
+  margin-top: 50px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 
   @include clearfix;
 
 }
+
+.detail__compare__data {
+  margin-top: 20px;
+}
+
+.detail__compare__select--item, .detail__compare__data--item  {
+  height: 49%;
+  width: 49%;
+  margin-right: 1%;
+  float: left;
+  background-color: #a1a1a1;
+  padding: 10px;
+
+  &:last-child {
+    margin: 0;
+  }
+
+}
+
+.detail__compare__data--item {
+  padding-bottom: 400px;
+}
+
+
+
 
 .draggable {
   width: 200px;
