--- a/resources/assets/sass/components/comparison.scss
+++ b/resources/assets/sass/components/comparison.scss
@@ -1,8 +1,9 @@
-.detail {
+.compare {
   margin-bottom: 30px;
 }
 
-.detail__compare__select, .detail__compare__data {
+
+.compare__detail__select, .compare__detail__data {
   margin-top: 50px;
   width: 80%;
   margin-left: auto;
@@ -12,11 +13,11 @@
 
 }
 
-.detail__compare__data {
+.compare__detail__data {
   margin-top: 20px;
 }
 
-.detail__compare__select--item, .detail__compare__data--item  {
+.compare__detail__select--item, .compare__detail__data--item  {
   height: 49%;
   width: 49%;
   margin-right: 1%;
@@ -30,12 +31,52 @@
 
 }
 
-.detail__compare__data--item {
+.compare__detail__data--item {
   padding-bottom: 400px;
+}
+
+.compare__items--item {
+  width: 110px;
+  height: 110px;
+  background-color: #a1a1a1;
+  float: left;
+  margin: 8px;
+  float: none;
+  display: inline-block;
+}
+
+.compare__items {
+  overflow-x: scroll;
+  width: 90%;
+  margin-top: 100px;
+  white-space: nowrap;
+  margin: 40px 30px 0px 30px;
 }
 
 
 
+/* Drag n drop */
+
+.comparison {
+  width: 800px;
+  height: 400px;
+
+  #div1, #div2 {
+    height: 100%;
+    width: 49%;
+    margin-right: 1%;
+    border: 1px solid black;
+    float: left;
+
+    &:last-child {
+      margin: 0;
+    }
+
+  }
+
+  @include clearfix;
+
+}
 
 .draggable {
   width: 200px;
