--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -1,3 +1,4 @@
+/*tags*/
 .filter__tags {
   margin-top: 35px;
 }
@@ -17,23 +18,66 @@
 }
 
 
-.compare .filter, .detail .filter {
+/*items*/
+.compare, .detail {
+  .filter__items--item {
+    width: 110px;
+    height: 110px;
+    background-color: #a1a1a1;
+    float: left;
+    margin: 8px;
+    float: none;
+    display: inline-block;
+  }
+
+  .filter__items {
+    overflow-x: scroll;
+    width: 90%;
+    margin-top: 100px;
+    white-space: nowrap;
+    margin: 40px 30px 0px 30px;
+  }
+
+}
+
+
+
+/*search*/
+.filter {
   text-align: center;
 }
 
-.compare, .detail {
-  .filter__search--label {
-    width: 30%;
-  }
-
-  .filter__search--span {
-    width: 60%;
-    float: left;
-    line-height: 33px;
-  }
-
-  .filter__search--search {
-    width: 40%;
-    float: left;
-  }
+.filter__search--label {
+  width: 30%;
 }
+
+.filter__search--span {
+  width: 60%;
+  float: left;
+  line-height: 33px;
+}
+
+.filter__search--search {
+  width: 40%;
+  float: left;
+}
+
+
+
+
+
+/*
+.filter__items {
+  text-align: center;
+}
+
+.filter__items--item {
+  width: 145px;
+  height: 145px;
+  background-color: #a1a1a1;
+  float: left;
+  margin: 8px;
+}*/
+
+
+
