add colors from styleguide as variables

--- a/resources/assets/sass/mixins/mixins.scss
+++ b/resources/assets/sass/mixins/mixins.scss
@@ -15,3 +15,44 @@
   font-family: 'Lato', sans-serif;
   font-weight: 700;
 }
+
+// whoop main green
+$w-green: #3DDE63;
+
+
+// Primary Colors
+// Primary Color Palette
+$w-lime: #9DE32B;
+$w-orange: #F5852B;
+$w-yellow: #F6CE41;
+
+// Primary Support Colors
+$w-orange-dark: #E36C0C;
+$w-orange-light: #FFAF6E;
+$w-yellow-dark: #EFBD0E;
+$w-yellow-light: #FAE084;
+$w-lime-dark: #86CA19;
+$w-lime-light: #BAF55D;
+$w-green-dark: #1DC545;
+$w-green-light: #6FF38E;
+
+
+// Support Colors
+$w-sunglo: #E45D5D;
+$w-brilliant-rose: #F749B4;
+$w-heliotrope: #C538F4;
+$w-dodger-blue: #45A6FA;
+$w-java: #1DE3E1;
+$w-paarl: #994B29;
+$w-wax-flower: #FFC8B0;
+$w-white: #FFFFFF;
+
+
+// Shades of Grey
+$w-mine-shaft: #363636;
+$w-boulder: #767676;
+$w-alto: #DEDEDE;
+$w-alabaster: #FAFAFA;
+
+
+// Background/Box Style = $w-white, $w-alto, $w-alabaster
