styling from mockups: overview, filter; add entry template

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,5 +5,6 @@
 @import "components/overview";
 @import "components/filter";
 @import "components/detail";
+@import "components/entry";
 
 @import "../../../node_modules/bootstrap-grid/dist/grid";
