--- a/resources/assets/sass/components/overview.scss
+++ b/resources/assets/sass/components/overview.scss
@@ -2,33 +2,18 @@ body {
   @include font-base;
 }
 
-.overview__header {
-  background-color: #ebebeb;
-  text-align: center;
-  padding: 30px;
-  margin-bottom: 30px;
-}
-
-.overview__header__facts {
-  margin-top: 35px;
-}
-
 .overview .filter, .overview__items {
-  margin-top: 70px;
+  margin-top: 15px;
 }
 
-.overview__header__facts--fact {
-  @include font-bald;
-  font-size: 1.3em;
-  margin: 0 12% 0 12%;
+.whoop-header {
+  background-color: $w-green;
+  padding: 40px;
+  color: $w-white;
+  text-align: center;
 }
 
-.overview__header__button {
-  float: right;
-}
-
-.overview__header__button--btn {
-  background: transparent;
-  border: none;
-  color: #736f6f;
+.whoop-header__intro {
+  font-size: 3em;
+  font-weight: 700;
 }
