dragndrop finished bugfix

--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -35,6 +35,19 @@
   color: #000000;
 }
 
+.filter__items--wrapper {
+  display: inline;
+}
+
+.filter__items--wrapper.hide {
+  display: none;
+}
+
+.compare .filter__items--wrapper {
+  display: inline-block;
+}
+
+
 .compare, .detail {
   .filter__items--wrapper {
     width: 110px;
