--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -24,12 +24,6 @@ h1{
   display: inline-block;
 }
 
-.compare{
-  padding-right: 62px;
-  background-color: $w-orange-dark;
-  font-family: 'Lato', sans-serif;
-}
-
 .breadcrumb{
   padding-left: 15px;
   margin-top: 20px;
@@ -42,14 +36,24 @@ h1{
   width: 100%;
   height: 50px;
   float: left;
-  background-color: #a1a1a1;
-  margin-top: 10px;
-  border: none;
-
-
   margin-bottom: 0;
   border-radius: 4px;
-  border-color: #ddd;
+  border: none;
+}
+
+.menu__inner{
+  position: absolute;
+  margin: 5%;
+  height: 50px;
+  float: left;
+  margin-bottom: 0;
+  border-radius: 4px;
+  border: none;
+}
+
+.statistic-menu {
+  margin-top: 10px;
+  border: 1px solid #ddd;
 }
 
 .sub_botton{
@@ -65,10 +69,6 @@ h1{
   padding-left: 15px;
 }
 
-.compare{
-  float: right;
-}
-
 .text{
   padding-left: 15px;
   color: #767676;
@@ -77,10 +77,14 @@ h1{
 }
 
 .menu__left {
-  margin-top: 20px;
   width: 20%;
   float: left;
+  margin-top: 20px;
   style: hover;
+}
+
+.menu:hover{
+  color: $w-white;
 }
 
 .country {
@@ -114,10 +118,6 @@ h1{
   border: 2px;
 }
 
-.buttons:hover{
-  color: $w-white;
-}
-
 .detail__items {
   overflow-x: scroll;
   width: 90%;
@@ -125,11 +125,7 @@ h1{
   white-space: nowrap;
   margin: 40px 30px 0px 30px;
 }
-
-
 // NEUES
-
-
 element.style {
 }
 #accordion {
@@ -145,7 +141,7 @@ element.style {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-user agent stylesheet
+
 div {
   display: block;
 }
@@ -159,9 +155,6 @@ body {
 
 body {
   color: #363636;
-}
-
-body {
   font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
   line-height: 1.67;
@@ -178,11 +171,28 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 *, :after, :before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+
+//toggle
+.collapse.in {
+  display: block;
+  visibility: visible;
+}
+
+.collapse {
+  display: none;
+  visibility: hidden;
 }
 
 *, :after, :before {
