--- a/resources/assets/sass/components/comparison.scss
+++ b/resources/assets/sass/components/comparison.scss
@@ -12,7 +12,7 @@
 
 }
 
-.compare__detail__select.comparison {
+.compare__detail__select.comparison, .compare__detail {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -21,7 +21,7 @@
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 
-  #div1, #div2 {
+  #div1, #div2, .compare__detail__data {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
@@ -36,7 +36,7 @@
   width: 49%;
   margin-right: 1%;
   float: left;
-  background-color: #a1a1a1;
+  background-color: $w-alto;
   padding: 10px;
 
   &:last-child {
