--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -27,9 +27,10 @@
   background-color: #ebebeb;
 }
 
+
 /*items*/
 .filter__items--item, .filter__items--wrapper {
-  background-color: $w-alabaster;
+  background-color: $w-alto;
   border-radius: 15px;
   font-size: initial;
   color: #000000;
@@ -43,10 +44,11 @@
   display: none;
 }
 
+
+/* compare */
 .compare .filter__items--wrapper {
   display: inline-block;
 }
-
 
 .compare, .detail {
   .filter__items--wrapper {
@@ -67,11 +69,13 @@
     width: 90%;
     margin-top: 100px;
     white-space: nowrap;
-    margin: 40px 30px 0px 30px;
+    margin: 40px 30px 0 30px;
   }
 
 }
 
+
+/* overview */
 .overview {
   .filter__items--item {
     width: 145px;
@@ -84,11 +88,10 @@
   .filter__items {
     text-align: center;
   }
-
 }
 
 
-/*search*/
+/* search */
 .filter {
   text-align: center;
 }
@@ -110,8 +113,6 @@
     text-align: left;
   }
 }
-
-
 
 @media (max-width: $max-sm) {
   .filter__search--label {
