--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -1,8 +1,3 @@
-
-.wrapper {
-
-}
-
 body {
   color: #363636;
   font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -52,7 +47,8 @@ h1{
 }
 
 .statistic-menu {
-  margin-top: 10px;
+  margin-top: 5px;
+  overflow: auto;
   border: 1px solid #ddd;
 }
 
@@ -89,14 +85,6 @@ h1{
 
 .country {
   width: 80%;
-  float: right;
-}
-
-.wrapper__left {
-  float: left;
-}
-
-.wrapper__right {
   float: right;
 }
 
