--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -33,6 +33,7 @@ h1{
   float: left;
   margin-bottom: 0;
   border-radius: 4px;
+  overflow: auto;
   border: none;
 }
 
@@ -43,6 +44,7 @@ h1{
   float: left;
   margin-bottom: 0;
   border-radius: 4px;
+  overflow: auto;
   border: none;
 }
 
@@ -96,14 +98,6 @@ h1{
   margin: 8px;
   float: none;
   display: inline-block;
-}
-
-.buttons {
-  width: 100%;
-  height: 44px;
-  border-radius: 3px;
-  color: $w-mine-shaft;
-  border: 2px;
 }
 
 .detail__items {
