--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -29,12 +29,21 @@ h1{
 
 .menu{
   width: 100%;
+  font-size: 18px;
   height: 50px;
   float: left;
   margin-bottom: 0;
   border-radius: 4px;
   overflow: auto;
   border: none;
+}
+
+.sub_botton{
+  overflow: auto;
+}
+
+.sub_botton:hover{
+  font:bold;
 }
 
 .menu__inner{
