--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -29,8 +29,9 @@ h1{
 
 .menu{
   width: 100%;
-  font-size: 18px;
-  height: 50px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
   float: left;
   margin-bottom: 0;
   border-radius: 4px;
@@ -42,21 +43,25 @@ h1{
   border-radius: 4px;
   border: none;
   height: 100%;
+  padding: 16px;
 }
 
 .statistic-menu {
   margin-top: 5px;
   overflow: auto;
   border: 1px solid #ddd;
+  border-radius: 5px;
 }
 
 .sub_botton{
-  margin-bottom: 26px;
   background-color: #fff;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  padding: 8px;
+  border-top: none;
+  border-left:none;
+  border-right: none;
+  line-height: 1.67;
+  vertical-align: top;
+  width: 100%;
 }
 
 .menu__right{
