--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -74,7 +74,7 @@ h1{
 }
 
 .sub_button:hover{
- font-weigh: 600;
+ font-weight: 600;
 }
 
 .sub_button:focus {
@@ -95,7 +95,7 @@ h1{
 .menu__left {
   width: 20%;
   float: left;
-  margin-top: 20px;
+  margin-top: 15px;
   style: hover;
 }
 
@@ -126,4 +126,29 @@ h1{
   margin: 40px 30px 0px 30px;
 }
 
+//neuer Shit
+.breadcrumb {
+  padding: 8px 15px;
+  margin-bottom: 26px;
+  list-style: none;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
 
+a {
+  color: $w-green;
+  text-decoration: none;
+}
+
+.compareBtn {
+  float: right;
+  border-radius: 5px;
+  font-size: 15px;
+  padding: 16px;
+  text-transform: uppercase;
+  background-color: #E36C0C;
+}
+
+.compareBtn:hover{
+  color: #ffff;
+}
