--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -84,11 +84,14 @@ h1{
   padding-left: 15px;
 }
 
-.text{
+.detail-content{
   padding-left: 15px;
-  color: #767676;
   font-family: Lato;
-  Size: 16px
+  font-size: 16px;
+}
+
+.detail-content .intro-text{
+  color: #767676;
 }
 
 .menu__left {
