add flags, add header

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,5 +6,6 @@
 @import "components/filter";
 @import "components/detail";
 @import "components/entry";
+@import "components/header";
 
 @import "../../../node_modules/bootstrap-grid/dist/grid";
