--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -1,6 +1,6 @@
 body {
   color: #363636;
-  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  @include font-base;
   font-size: 16px;
   line-height: 1.67;
 }
