--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -148,7 +148,8 @@ a {
   font-size: 15px;
   padding: 16px;
   text-transform: uppercase;
-  background-color: #E36C0C;
+  color: $w-alabaster;
+  background-color: $w-green;
 }
 
 .compareBtn:hover{
