font base auslagern

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,6 @@
 @import "mixins/mixins";
 
+@import "components/base";
 @import "components/comparison";
 @import "components/slide";
 @import "components/overview";
