--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -61,6 +61,8 @@
 
   .filter__search__span {
     width: 50%;
+    line-height: 1.3;
+    padding-right: 10px;
     float: left;
     text-align: right;
   }
@@ -73,9 +75,8 @@
   }
 
   .img-flag {
-    height: 100%;
-    width: auto;
-    margin-top: -4px;
+    vertical-align: baseline;
+    height: 25px;
   }
 
 }
