--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -63,6 +63,8 @@
     width: 50%;
     float: left;
     text-align: right;
+    padding-right: 10px;
+    line-height: 1.3;
   }
 
   .filter__search__search {
