back buttons, style fixes

--- a/resources/assets/sass/components/base.scss
+++ b/resources/assets/sass/components/base.scss
@@ -1,4 +1,5 @@
-body {
+.container {
+  font-size: 16px;
   @include font-base;
 }
 
@@ -30,4 +31,9 @@ h3 {
   font-size: 20px;
   line-height: 32px;
   font-family: 'Lato', sans-serif;
+}
+
+.button__back {
+  float: left;
+  @include font-base;
 }
