--- a/resources/assets/sass/components/header.scss
+++ b/resources/assets/sass/components/header.scss
@@ -14,3 +14,47 @@
   color: $w-boulder;
   vertical-align: middle;
 }
+
+.nav__top {
+  width: 100%;
+
+  &__back {
+    float: left;
+    padding: 8px 15px;
+    background-color: $w-yellow-light;
+    border-radius: 4px;
+    color: #000000;
+    font-size: initial;
+  }
+
+  &__breadcrumbs {
+    float: left;
+    margin-left: 10px;
+  }
+
+  &__breadcrumb {
+    padding: 8px 15px;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    list-style-type: none;
+
+    li {
+      display: inline-block;
+
+      a {
+        color: #000000;
+        font-size: initial;
+      }
+    }
+  }
+
+  &:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+  }
+
+}
