--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,5 +7,6 @@
 @import "components/detail";
 @import "components/entry";
 @import "components/header";
+@import "components/base";
 
 @import "../../../node_modules/bootstrap-grid/dist/grid";
