changed button margin, changed header-img

--- a/resources/assets/sass/components/overview.scss
+++ b/resources/assets/sass/components/overview.scss
@@ -3,7 +3,8 @@
 }
 
 .whoop-header {
-  background-color: $w-green;
+  background-image: url(/img/hero-whoop.jpg);
+  background-size: 100%;
   padding: 40px;
   color: $w-white;
   text-align: center;
