--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -14,6 +14,16 @@
   margin-bottom: 0;
   border-radius: 4px;
   border: none;
+  text-align: left;
+
+  &__img {
+    height: 30px;
+    width: auto;
+    float: left;
+    margin-top: 7px;
+    margin-left: 7px;
+    margin-right: 7px;
+  }
 }
 
 .menu:focus {
