--- a/resources/assets/sass/components/overview.scss
+++ b/resources/assets/sass/components/overview.scss
@@ -3,10 +3,10 @@
 }
 
 .whoop-header {
-  background-image: url(/img/hero-whoop.jpg);
+  color: #363636;
+  font-family: 'Lato', sans-serif;
   background-size: 100%;
   padding: 40px;
-  color: $w-white;
   text-align: center;
 }
 
