--- a/resources/assets/sass/components/overview.scss
+++ b/resources/assets/sass/components/overview.scss
@@ -3,11 +3,13 @@
 }
 
 .whoop-header {
-  color: #363636;
+  color: #ffffff;
   font-family: 'Lato', sans-serif;
+  background-image: url(/img/hero-whoop.jpg);
   background-size: 100%;
   padding: 40px;
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .whoop-header__intro {
