--- a/resources/assets/sass/components/detail.scss
+++ b/resources/assets/sass/components/detail.scss
@@ -1,7 +1,7 @@
 .chart{
-  width: 500px;
-  margin: 40px;
-  height: 350px;
+  height: 230px;
+  width: 70%;
+  margin: 30px;
   display: inline-block;
 }
 
