--- a/resources/assets/sass/mixins/mixins.scss
+++ b/resources/assets/sass/mixins/mixins.scss
@@ -55,6 +55,7 @@ $w-white: #FFFFFF;
 // Shades of Grey
 $w-mine-shaft: #363636;
 $w-boulder: #767676;
+$w-grey-dark: #555555;
 $w-alto: #DEDEDE;
 $w-alabaster: #FAFAFA;
 
