--- a/resources/assets/sass/components/header.scss
+++ b/resources/assets/sass/components/header.scss
@@ -16,8 +16,16 @@
   font-size: 12px;
 }
 
-a:hover {
+.header__nav:hover {
   text-decoration: none;
+  font-weight: 900;
+  color: $w-grey-dark;
+}
+
+.header__nav:active {
+  text-decoration: none;
+  font-weight: 700;
+  color: $w-grey-dark;
 }
 
 .nav__top {
