--- a/resources/assets/sass/components/header.scss
+++ b/resources/assets/sass/components/header.scss
@@ -1,4 +1,4 @@
-/*.header {
+.header {
   overflow: auto;
   margin-top: 10px;
   position: relative;
@@ -128,5 +128,5 @@
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
-} **/
+}
 
