hover and active state filter items - text decoration none

--- a/resources/assets/sass/components/entry.scss
+++ b/resources/assets/sass/components/entry.scss
@@ -51,5 +51,13 @@
       text-transform: uppercase;
       padding: 15px;
     }
+    &__button:hover{
+      text-decoration: none;
+      color: $w-mine-shaft
+    }
+    &__button:active{
+      text-decoration: none;
+      color: $w-mine-shaft
+    }
   }
 }
