--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -73,6 +73,7 @@
   background-color: #ebebeb;
 }
 
+
 .filter__items__wrapper {
   display: inline-block;
   padding: 15px;
@@ -82,6 +83,14 @@
 
   &.hide {
     display: none;
+  }
+  a:hover{
+    text-decoration: none;
+    color: $w-boulder;
+  }
+  a:active{
+    text-decoration: none;
+    color: $w-boulder;
   }
 }
 
