--- a/resources/assets/sass/components/comparison.scss
+++ b/resources/assets/sass/components/comparison.scss
@@ -73,6 +73,14 @@
 
 
 #div2 {
+
+  .div2__info {
+    width: 100%;
+    text-align: center;
+    line-height: 2;
+    pointer-events: none;
+  }
+
   .filter__items__wrapper {
     width: auto;
     height: auto;
@@ -108,6 +116,7 @@
   a {
     color: $w-mine-shaft;
     font-size: initial;
+    line-height: 2;
   }
   a:hover{
     text-decoration: none;
