--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -192,4 +192,45 @@
 
 
 
+/* mobile adjustments */
+
+@media (max-width: $min-xs) {
+
+  .filter__search {
+    margin-top: 10px;
+  }
+
+  .filter__search__label {
+    width: 100%;
+    font-weight: 300;
+
+    .filter__search__span {
+      width: 100%;
+      text-align: center;
+    }
+
+    .filter__search__search {
+      width: 100%;
+      height: 40px;
+      text-align: left;
+    }
+  }
+
+  .filter__tag {
+    font-size: 11px;
+    padding: 4px 6px 4px;
+  }
+
+  .compare , .detail {
+    .filter__items {
+      width: 100%;
+    }
+  }
+
+  .overview .filter__items__wrapper {
+    width: 200px;
+    height: 200px;
+  }
+
+}
 
