--- a/resources/assets/sass/components/filter.scss
+++ b/resources/assets/sass/components/filter.scss
@@ -146,8 +146,12 @@
   }
 
   .filter__item {
-    width: 110px;
-    height: 110px;
+    width: 100%;
+    display: inline-block;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .filter__items {
