image and style of chart-outputs

--- a/resources/assets/sass/components/statistic_details.scss
+++ b/resources/assets/sass/components/statistic_details.scss
@@ -1,3 +1,19 @@
 .list-group{
   list-style-type: decimal;
 }
+
+.data{
+  font-weight: 700;
+  font-size: xx-large;
+}
+
+.data-div{
+  background-color: $w-alabaster;
+  text-align: center;
+  padding: 20px;
+}
+
+.data-div img{
+  width: 20%;
+  padding: 20px;
+}
