--- a/resources/assets/sass/components/header.scss
+++ b/resources/assets/sass/components/header.scss
@@ -1,100 +1,8 @@
-.header {
-  overflow: auto;
-  margin-top: 10px;
-  position: relative;
-  min-height: 50px;
-}
-
-.header__img {
-  text-indent: -878px;
-  height: 60px;
-  width: auto;
-  position: relative;
-  top: -15px;
-  display: block;
-  z-index: 20;
-}
-
-.header__nav {
-  margin-left: 8px;
-  text-transform: uppercase;
-  color: $w-boulder;
-  vertical-align: middle;
-  font-size: 12px;
-}
-
-.signup {
-  background-color: #e65c5a;
-  border-radius: 5px;
-  font-weight: 700 !important;
-  color: #ffffff;
-}
-
-.header__nav:hover {
-  text-decoration: none;
-  font-weight: 700;
-  color: $w-grey-dark;
-}
-
-.header__nav:active {
-  text-decoration: none;
-  font-weight: 700;
-  color: $w-grey-dark;
-}
-
-.nav__top {
-  width: 100%;
-
-  &__back {
-    float: left;
-    background-color: $w-yellow-light;
-    border-radius: 4px;
-    color: #000000;
-    font-size: initial;
-  }
-
-  &__breadcrumbs {
-    float: left;
-    margin-left: 10px;
-  }
-
-  &__breadcrumb {
-    padding: 8px 15px;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-    list-style-type: none;
-
-    li {
-      display: inline-block;
-
-      a {
-        color: $w-green;
-        font-size: initial;
-      }
-      &>.active{
-        color: #777;
-      }
-    }
-
-  }
-
-  &:after {
-    content: ".";
-    display: block;
-    clear: both;
-    visibility: hidden;
-    line-height: 0;
-    height: 0;
-  }
-
-}
-
-
 
 #main-navbar {
   background-color: #ffffff;
-  font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 17px;
+  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
   height: 80px;
   z-index: 9999;
   position: relative;
@@ -103,30 +11,140 @@
   box-shadow: 1px 1px 2px #797979;
 }
 
-
-#main-navbar .navbar-default {
-  background-color: #fff;
-  border: none;
+.img{
+  width: 107px;
+  position: relative;
+  float: left;
 }
 
-#main-navbar nav {
-  margin-bottom: 0;
+#logo{
+  width: 107px;
+  height: 53px;
+  top: -15px;
+  text-indent: -878px;
+  position: relative;
+  display: block;
+  z-index: 20;
+
+}
+
+.navbar-default{
   padding-top: 10px;
 }
 
-.navbar {
-  border-radius: 4px;
-}
-
-.navbar {
-  position: relative;
-  min-height: 50px;
-  margin-bottom: 26px;
-  border: 1px solid transparent;
-}
-
 .container-fluid {
-  margin-right: auto;
-  margin-left: auto;
+  padding: 0px 15px 0px 15px;
 }
 
+.collapse .navbar-collapse{
+  padding: 0px 15px 0px 15px;
+  height: 70px;
+  width: 50%;
+}
+
+.nav .navbar-nav{
+  padding-top: 5px;
+  height: 65px;
+  width: 400px;
+  float:left;
+  position: relative;
+}
+
+li{
+  display: inline;
+  padding-top: 5px;
+}
+
+.dropdown-menu{
+  display: none;
+}
+
+a {
+  text-decoration: none;
+  color: #767676;
+  margin: 0px 15px 0px 15px;
+}
+
+a:active{
+  color: #555555;
+  font-weight: 700;
+}
+
+a:hover{
+  color: #555555;
+  font-weight: 700;
+}
+
+.current-lang-btn{
+
+}
+/*
+
+
+.header {
+    overflow: auto;
+    margin-top: 10px;
+    position: relative;
+    min-height: 50px;
+}
+
+.header__img {
+    text-indent: -878px;
+    height: 60px;
+    width: auto;
+    position: relative;
+    top: -15px;
+    display: block;
+    z-index: 20;
+}
+
+.header__nav {
+    margin-left: 8px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    vertical-align: middle;
+    font-size: 12px;
+}
+
+.signup {
+    background-color: #e65c5a;
+    border-radius: 5px;
+    font-weight: 700;
+    color: #FFFFFF;
+}
+
+.header__nav:hover {
+    text-decoration: none;
+    font-weight: 700;
+    color: grey;
+}
+
+.header__nav:active {
+    text-decoration: none;
+    font-weight: 700;
+    color: dimgrey;
+}
+
+
+
+#main-navbar nav {
+    margin-bottom: 0;
+    padding-top: 10px;
+}
+
+.navbar {
+    border-radius: 4px;
+}
+
+.navbar {
+    position: relative;
+    min-height: 50px;
+    margin-bottom: 26px;
+    border: 1px solid transparent;
+}
+
+.current-lang-btn {
+    border: none;
+}
+
+*/
