--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,4 +10,4 @@
 @import "components/header";
 @import "components/base";
 
-@import "../../../node_modules/bootstrap-grid/dist/grid";
+@import "../../../node_modules/bootstrap/dist/css/bootstrap.min";
